--- a/src/main/resources/static/js/app/widgets/form-field-widget.html
+++ b/src/main/resources/static/js/app/widgets/form-field-widget.html
@@ -1,4 +1,4 @@
-<div class="pull-right" data-bind="if: !required()">
+<div class="pull-right" data-bind="if: optional">
     <a class="btn btn-danger danger btn-xs" data-bind="click: $parent.removeFormField" role="button">Entfernen</a>
 </div>
 <div class="form-group">
