fixed screenshot width

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -260,7 +260,7 @@
                     <div data-bind="text: label"></div>
                     <!-- ko if: $data.value -->
                     <a data-bind="attr: { href: value}">
-                        <img class="imageInformation" data-bind="attr: { src: value}" />
+                        <img class="img-responsive" data-bind="attr: { src: value}" />
                     </a>
                     <!-- /ko -->
                 </div>
