--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,7 @@
         <div id="mapcontainer">
             <div id="leftsidebar" class="sidebar container-fluid">
                 <div id="split-bar"></div>
+                <div class="gap"></div>
                 <!--<div class="row"><div id="banner" class="col-lg-12"></div></div>-->
                 <div id="loginMode" class="sidebarContent" data-bind="visible: mode() == 'login', with: loginForm">
                     <div class="headline">Login</div>
