--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,19 +47,21 @@
                 <!--<div class="row"><div id="banner" class="col-lg-12"></div></div>-->
                 <div id="loginMode" class="sidebarContent" data-bind="visible: mode() == 'login', with: loginForm">
                     <div class="headline">Login</div>
-                    <div class="formField">
-                        <label for="loginName">Name:</label>
-                        <input id="loginName" type="text" data-bind="value: name">
-                    </div>
+                    <form>
+                        <div class="formField">
+                            <label for="loginName">Name:</label>
+                            <input id="loginName" type="text" data-bind="value: name">
+                        </div>
 
-                    <div class="formField">
-                        <label for="loginPassword">Passwort:</label>
-                        <input id="loginPassword" type="password" data-bind="value: password">
-                    </div>
-                    <div data-bind="text: message"></div>
+                        <div class="formField">
+                            <label for="loginPassword">Passwort:</label>
+                            <input id="loginPassword" type="password" data-bind="value: password">
+                        </div>
+                        <div data-bind="text: message"></div>
 
-                    <button class="btn btn-default" data-bind="click: login">Login</button>
-                    <button class="btn btn-default" data-bind="click: cancel">Abbrechen</button>
+                        <button type="submit" class="btn btn-default" data-bind="click: login">Login</button>
+                        <button class="btn btn-default" data-bind="click: cancel">Abbrechen</button>
+                    </form>
                 </div>
                 <div id="registerMode" class="sidebarContent" data-bind="visible: mode() == 'register', with: registerForm">
                     <div class="headline">Registrieren</div>
